--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "joaopaulolndev/filament-pdf-viewer": "^1.0",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
-        "livewire/livewire": "^3.5"
+        "livewire/livewire": "3.5.12"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
