--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,10 @@
         "filament/filament": "3.2.52",
         "joaopaulolndev/filament-pdf-viewer": "^1.0",
         "laravel/framework": "^11.31",
+        "laravel/reverb": "^1.0",
         "laravel/tinker": "^2.9",
-        "livewire/livewire": "3.5.12"
+        "livewire/livewire": "3.5.12",
+        "munafio/chatify": "^1.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
