--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/reverb": "^1.0",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "3.5.12",
-        "munafio/chatify": "^1.6"
+        "munafio/chatify": "^1.6",
+        "phpoffice/phpspreadsheet": "^4.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
